# HaskellScheme

./: .gitignore  HaskellScheme.cabal  README.md
.github/workflows/: test.yaml
app/: Main.hs
src/Language/: Scheme.hs
src/Language/Scheme/: Eval.hs  Parser.hs
src/Language/Scheme/Eval/: Internal.hs
src/Language/Scheme/Parser/: Internal.hs
test/: Spec.hs
test/Language/Scheme/: ParserSpec.hs
