cabal-version: 2.2

name:           HaskellScheme
version:        1.0.0.0
description:    Please see the README on GitHub at <https://github.com/t-sasaki915/HaskellScheme#readme>
homepage:       https://github.com/t-sasaki915/HaskellScheme#readme
bug-reports:    https://github.com/t-sasaki915/HaskellScheme/issues
author:         Toma Sasaki
maintainer:     netst915@gmail.com
copyright:      2025 Toma Sasaki
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/t-sasaki915/HaskellScheme

library
  exposed-modules:
      Language.Scheme.Eval.Internal
      Language.Scheme.Parser.Internal
      Language.Scheme.Eval
      Language.Scheme.Parser
      Language.Scheme
  other-modules:
      Paths_HaskellScheme
  autogen-modules:
      Paths_HaskellScheme
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
    , parsec ==3.1.18.0
    , text ==2.1.2
    , transformers ==0.6.1.2
  default-language: Haskell2010
  default-extensions: LambdaCase, OverloadedStrings, QuasiQuotes

executable HaskellScheme-interpreter
  main-is: Main.hs
  other-modules:
      Paths_HaskellScheme
  autogen-modules:
      Paths_HaskellScheme
  hs-source-dirs:
      app
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      HaskellScheme
    , base >=4.7 && <5
    , text ==2.1.2
    , optparse-applicative ==0.18.1.0
  default-language: Haskell2010
  default-extensions: LambdaCase, OverloadedStrings, QuasiQuotes

test-suite HaskellScheme-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_HaskellScheme
      Language.Scheme.ParserSpec
  autogen-modules:
      Paths_HaskellScheme
  hs-source-dirs:
      test
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      HaskellScheme
    , base >=4.7 && <5
    , hspec ==2.11.12
    , parsec ==3.1.18.0
    , text ==2.1.2
    , hspec-parsec ==0
    , heredoc ==0.2.0.0
  default-language: Haskell2010
  default-extensions: LambdaCase, OverloadedStrings, QuasiQuotes
